# prog-templates

./: README.md
cpp-win32-hello/: .gitignore  README.md  build-vs.cmd  gen-build-vs.cmd  gen-build.cmd  meson.build
cpp-win32-hello/src/: main.cpp  meson.build
